WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269841
[Clang] Unused parameter warnings in WebsiteDataStoreClient.h
https://bugs.webkit.org/show_bug.cgi?id=269841
Summary
[Clang] Unused parameter warnings in WebsiteDataStoreClient.h
Philippe Normand
Reported
2024-02-21 04:32:11 PST
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-02-21 04:34:19 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24874
EWS
Comment 2
2024-02-21 11:35:55 PST
Committed
275118@main
(5240fc400e2f): <
https://commits.webkit.org/275118@main
> Reviewed commits have been landed. Closing PR #24874 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug