[Clang] Unused parameter warnings in WebsiteDataStoreClient.h https://bugs.webkit.org/show_bug.cgi?id=269841

Reviewed by Michael Catanzaro.

Make the didExceedMemoryFootprintThreshold() unused parameters anonymous.

* Source/WebKit/UIProcess/WebsiteData/WebsiteDataStoreClient.h:
(WebKit::WebsiteDataStoreClient::didExceedMemoryFootprintThreshold):

Canonical link: https://commits.webkit.org/275118@main